# dotdash

./: .gitignore  CMakeLists.txt  todo.txt
include/: dictionary.h  dotdash.h  parser.h
src/: dictionary.cpp  dotdash.cpp  main.cpp  parser.cpp
